<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="136dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imageView"
        android:src="@drawable/mainicon" />

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:gravity="center" />



    <!-- Description -->
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_description"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:padding="8dp" />

    <!-- Start Button -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="12dp"
        android:text="@string/start_questionnaire"
        android:textColor="#000000" />
</LinearLayout>
